fixed grammarly bug where textarea would jump if grammarly was enabled

--- a/src/components/style/Sass/contactForm.scss
+++ b/src/components/style/Sass/contactForm.scss
@@ -35,6 +35,7 @@ $contact-submit-hover-bg: $accent;
 .form-container {
     box-sizing: border-box;
     max-width: $form-max-width;
+    min-height: max-content;
     width: 90%;
     height: max-content;
     
@@ -65,6 +66,7 @@ $contact-submit-hover-bg: $accent;
 
         box-sizing: border-box;
         width: 100%;
+        
         border-width: 1px;
         border-style: solid;
         
@@ -87,8 +89,12 @@ $contact-submit-hover-bg: $accent;
         }
     }
 
+    .contact-inputfield {
+    }
+
     #contact-message {
-        height: 200px;
+        min-height: 150px;
+        //height: 200px;
         resize: none;
     }
 
